force-app/main/default/objects/cfs_hw_product__c/cfs_hw_product__c.object-meta.xml
<CustomObject>
    <label>CFS HW Product</label>
    <nameField>
        <label>CFS HW Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFS HW Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>