force-app/main/default/objects/cfs_hw_product__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>