force-app/main/default/objects/cfs_hw_product__c/fields/install_loc_cust_site_nbr__c.field-meta.xml
<CustomField>
    <fullName>install_loc_cust_site_nbr__c</fullName>
    <label>Install Local Customer Site Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>