force-app/main/default/objects/cfs_hw_product__c/fields/invtry_item_desc__c.field-meta.xml
<CustomField>
    <fullName>invtry_item_desc__c</fullName>
    <label>Inventory Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>