force-app/main/default/objects/cfs_hw_product__c/fields/item_active_end_date_time__c.field-meta.xml
<CustomField>
    <fullName>item_active_end_date_time__c</fullName>
    <label>Item Active End Date/Time</label>
    <type>DateTime</type>
</CustomField>