force-app/main/default/objects/cfs_hw_product__c/fields/item_install_date_time__c.field-meta.xml
<CustomField>
    <fullName>item_install_date_time__c</fullName>
    <label>Item Install Date/Time</label>
    <type>DateTime</type>
</CustomField>