force-app/main/default/objects/cfs_hw_product__c/fields/item_instance_nbr__c.field-meta.xml
<CustomField>
    <fullName>item_instance_nbr__c</fullName>
    <label>Item Instance Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>