force-app/main/default/objects/cfs_hw_product__c/fields/Legal_Agreement_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Agreement_Renewal_Date__c</fullName>
    <label>Legal Agreement Renewal Date</label>
    <type>Date</type>
</CustomField>