force-app/main/default/objects/cfs_hw_product__c/fields/offering_acctg_type_code__c.field-meta.xml
<CustomField>
    <fullName>offering_acctg_type_code__c</fullName>
    <label>Offering Account Type Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>