force-app/main/default/objects/cfs_hw_product__c/fields/serial_nbr__c.field-meta.xml
<CustomField>
    <fullName>serial_nbr__c</fullName>
    <label>Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>